<resources>
    <string name="app_name">JEDIFinal</string>
    <string name="login_register">Register</string>
    <string name="login_login">Log in</string>
    <string name="login_username">username</string>
    <string name="login_password">Password</string>
    <string name="profile_username">User name</string>
    <string name="profile_home_town">Home town</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_undefined">Undefined</string>
    <string name="profile_menu_edit">Edit</string>
    <string name="edit_profile_accept">Accept</string>
    <string name="edit_profile_cancel">Cancel</string>
    <string name="edit_profile_repeat_password">Repeat password</string>
    <string name="edit_profile_hometown">Hometown</string>
    <string name="edit_profile_birthday">Birthday</string>
    <string name="edit_profile_new_password">New password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
